--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.13.2",
     "dayjs": "^1.11.19",
     "formik": "^2.4.9",
+    "nanoid": "^5.1.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
